[package]
name = "random-branch"
keywords = ["pick", "choose", "match", "random"]
version = "0.2.0-alpha.0"
description = "Provides a macro to select a random branch like match"
authors = ["Cryptjar <cryptjar@junk.studio>"]
edition = "2018"
repository = "https://github.com/cryptjar/random-branch"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["algorithms", "no-std"]


[features]
# Default features
default = ["std"]

# Requires std, enables the `branch` macro
std = ["rand/std", "rand/std_rng"]

# Requires Nightly Rust, enables the doc_cfg nightly feature to mark items that
# require crate-features. Only useful for documentation.
doc_cfg = []


[dependencies.rand]
version = "0.9"
default-features = false

[dev-dependencies.rand]
version = "0.9"
features = ["default"]

[dev-dependencies.rand_pcg]
version = "0.9"


# Enable all features when building docs on docs.rs
[package.metadata.docs.rs]
all-features = true
